--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://47.98.206.89:3306/seat_system?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&&allowPublicKeyRetrieval=true&&useAffectedRows=true
+    url: jdbc:mysql://47.98.206.89:3306/coal_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&&allowPublicKeyRetrieval=true&&useAffectedRows=true
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     date-format: com.fasterxml.jackson.databind.util.StdDateFormat
